--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,11 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
+
 # exclude:
 #   - .sass-cache/
 #   - .jekyll-cache/
