--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Blazor training
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: 
  Blazor training
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "Blazor-site" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
 theme: jekyll-theme-tactile
-plugins:
-  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
