--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Blazor training
 email: your-email@example.com
 description: 
  Blazor training
-baseurl: "/Blazor-site" # the subpath of your site, e.g. /blog
+# baseurl: "/Blazor-site" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
