--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Blazor training
-email: your-email@example.com
-description: 
- Blazor training
+email: simona.balan@centric.eu
+description: Blazor training
 baseurl: "/Blazor-site" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
